--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,24 @@
     color: rgba(2, 83, 133, 0.7);
 }
 
+.blink {
+    animation: blink 1s linear infinite;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: .5;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 @keyframes move-twink-back {
     from {
         background-position: 0 0;
